package com.example.edelhome.ui.geraet;

import androidx.lifecycle.ViewModel;
import androidx.lifecycle.ViewModelProviders;

public class GeraetViewModel extends ViewModel {





}
