@startuml

title __GERAET's Class Diagram__\n

  namespace com.example.edelhome {
    namespace ui.geraet {
      class com.example.edelhome.ui.geraet.GeraetFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.geraet {
      class com.example.edelhome.ui.geraet.GeraetViewModel {
      }
    }
  }
  

  com.example.edelhome.ui.geraet.GeraetFragment -up-|> androidx.fragment.app.Fragment
  com.example.edelhome.ui.geraet.GeraetFragment o-- com.example.edelhome.ui.geraet.GeraetFragment : geraetFragment
  com.example.edelhome.ui.geraet.GeraetFragment o-- com.example.edelhome.ui.geraet.GeraetViewModel : geraetViewModel
  com.example.edelhome.ui.geraet.GeraetViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
